@@ -143,6 +143,11 @@ Changes on 1.2.0 since 1.1.0:
     asterisk (*) prepended to application ID. The choice of view in the
     PCManFM itself is saved as pseudo-ID "pcmanfm".
 
+* The menu option 'Edit'->'Delete' is split to two: 'Move to Trash' and
+    'Delete' because some users with disabilities may not be able to use
+    keybinding Shift+Del therefore should be a possibility to do exact
+    action by mouse only.
+
 
 Changes on 1.1.0 since 1.0.1:
 
